dark mode fixes

--- a/src/comps/admin/common/styles/Navbar.css
+++ b/src/comps/admin/common/styles/Navbar.css
@@ -288,7 +288,7 @@
 
 .circlenum {
   position: absolute;
-  top: -3px;
+  top: 2px;
   right: -3px;
   width: 18px;
   height: 18px;
