--- a/src/comps/admin/common/styles/PageStarter.css
+++ b/src/comps/admin/common/styles/PageStarter.css
@@ -12,10 +12,10 @@
 .pagestarter h6 {
   color: #555;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 13px;
 }
 .pagestarter h3 {
-  font-size: 22px;
+  font-size: 23px;
   text-align: center;
 }
 .pagestarter img {
